- include/nls.h util/nlsasm.S: Small size optimization - Do not use gettext()
  at all anymore when CONF_NO_NLS is set during "make UNIQUE=xx" (THH)
- util/nlsasm.S aes/optimopt.S: Hack for compiling EmuTOS with GCC 4.2.
  This compiler sometimes expects return values for pointers to be passed back
  in A0 instead of D0. So gettext() and scasb() have now been changed to
  satisfy this requirement. (THH)

2007-11-08
- util/memmove.S include/string.h: Removed the deprecated and unused function
  bcopy. (THH)
- util/stringasm.S: Patched strchr() for GCC 4.2. (THH)
- vdi/vdi_control.c: Now using memset() in v_clrwk() to clear the screen - this
  is hopefully a little bit faster than the former dumb loop. (THH)

2007-11-15
- aes/geminit.c aes/gemshlib.* aes/gemstart.S desk/desk_rsc.c desk/deskmain.c:
  Added the possibility to change the resolution between ST-low and ST-medium
  resolution (highly experimental!). (THH)

2007-11-19
- vdi/vdi_col.c: Palette is now initialized during v_opnwk() and added color
  mapping for 4 color mode (ST medium resolution). (THH)
- util/nlsasm.S util/stringasm.S: Removed A0-return-value hacks since there
  is a version of of GCC 4.2 (ported by Olivier Landemarre) which does not
  suffer from this annoying A0 "bug". (THH)
- desk/desk_rsc.c: Disable menu entry for changing resolution again - it is
  still way too incomplete for the public. (THH)

2008-01-05
- bios/screen.c: Since we only support VGA resolutions by now, toggle the
  double-scan bit in vsetmode when a RGB mode is requested. (THH)
- include/asm.h util/miscasm.S: Changed macros for swapping the endianess of
  a variable to use inline assembler - that's faster and less code. (THH)

2008-01-06
- include/config.h: STOP instruction will now be used by default when a
  TOS version >= 2.00 is compiled. (THH)
- bios/clock.c: Got rid of RTC_TOS_VER - the year offset in the NVRAM is now
  autodetected. (THH)
- vdi/vdi_mouse.c: Fixed off-by-one bug in VDI mouse driver. (THH)