@@ -2053,3 +2053,7 @@ Start... early ages
 - bios/clock.c: Got rid of RTC_TOS_VER - the year offset in the NVRAM is now
   autodetected. (THH)
 - vdi/vdi_mouse.c: Fixed off-by-one bug in VDI mouse driver. (THH)
+
+2008-01-21
+- include/biosbind.h bdos/fs.h: Added support for the extended Rwabs call,
+  with lrecno parameter. (THH)
